--- a/II UNIDADE/Trabalho 2/Conditional_GAN.ipynb
+++ b/II UNIDADE/Trabalho 2/Conditional_GAN.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "name": "Conditional_GAN.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +18,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fequeiroz/artificial-inteligence/blob/main/II%20UNIDADE/Trabalho%202/Conditional_GAN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "3gRehL165DWj"
       },
       "source": [
-        "# Red Neuronal Conditional GAN\n",
-        "\n",
-        "Autor: M. en C. Mario Xavier Canche Uc, Diciembre 2020, mario.canche@cimat.mx  \n",
-        "\n",
-        "Basado en: \n",
-        "- https://www.cimat.mx/~mrivera/cursos/aprendizaje_profundo/dcgan/dcgan.html  \n",
-        "- https://www.tensorflow.org/tutorials/generative/dcgan"
+        "# Rede Neural Condicional GAN\n",
+        "\n"
       ]
     },
     {
@@ -36,7 +41,7 @@
         "id": "ok_18z_G5G38"
       },
       "source": [
-        "## Cargamos las librerías"
+        "## Carregar as bibliotecas "
       ]
     },
     {
@@ -123,7 +128,7 @@
         "id": "la2exNI15XqI"
       },
       "source": [
-        "## Definimos los paramétros"
+        "## Definimos os parâmetros"
       ]
     },
     {
@@ -243,7 +248,7 @@
         "id": "cr4U9AW65nHH"
       },
       "source": [
-        "## Definimos el Generador"
+        "## Definimos o Gerador"
       ]
     },
     {
@@ -376,7 +381,7 @@
         "id": "psMWGQP454JW"
       },
       "source": [
-        "## Definimos el Discriminador"
+        "## Definimos o Descriminador"
       ]
     },
     {
@@ -509,7 +514,7 @@
         "id": "vRuGKc1T60k7"
       },
       "source": [
-        "## Definimos las funciones de pérdida"
+        "## Definimos as funcões de perda"
       ]
     },
     {
@@ -529,7 +534,7 @@
         "id": "FFNDSq_S7JM3"
       },
       "source": [
-        "### Pérdida del discriminador"
+        "### Perda do descriminador"
       ]
     },
     {
@@ -570,7 +575,7 @@
         "id": "b5akeMNF7P-9"
       },
       "source": [
-        "### Pérdida del generador"
+        "### Perda do gerador"
       ]
     },
     {
@@ -605,7 +610,7 @@
         "id": "9ar1Nf-K7iHv"
       },
       "source": [
-        "## Definimos los optimizadores"
+        "## Definimos os otimizadores"
       ]
     },
     {
@@ -626,7 +631,7 @@
         "id": "hm6t1WBK7tiE"
       },
       "source": [
-        "## Definimos los pasos para el Entrenamiento"
+        "## Definimos os passos para o Treinamento"
       ]
     },
     {
@@ -790,15 +795,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GAtNryH47z1T"
-      },
-      "source": [
-        "## Entrenamos la GAN"
-      ]
     },
     {
       "cell_type": "code",
@@ -1322,7 +1318,7 @@
         "id": "ipLWLdP78cSO"
       },
       "source": [
-        "## Guardamos los resultados"
+        "## Guardamos os resultados"
       ]
     },
     {
@@ -1343,7 +1339,7 @@
         "id": "vfP6FcU78Xei"
       },
       "source": [
-        "## Visualizamos los resultados"
+        "## Visualizamos os resultados"
       ]
     },
     {
@@ -1422,7 +1418,7 @@
         "id": "Y9Rmid2-X3Ap"
       },
       "source": [
-        "## Ejemplo de Digitos generados y aplicando la SuperResolucion UNET"
+        "## Exemplo de Dígitos gerados e aplicação da SuperResolução UNET"
       ]
     },
     {
@@ -1661,9 +1657,7 @@
       "metadata": {
         "id": "avPon5Z0X0mv"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
